# sevenator

./: .gitignore  Cargo.toml  README.md  brass1.xml  cartridge.xsd  initvoice.xml  testcartridge.xml  voice.xsd
src/: algorithms.in  cmd.rs  dx7.rs  lib.rs  main.rs  rom1asyx.in  tx802.rs
src/dx7/: mod.rs  randomizer.rs
src/tx802/: mod.rs
