[package]
name = "sevenator"
version = "0.15.1"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
num = "0.4.1"
rand = "0.8.5"
bit = "0.1.1"
syxpack = "0.17.0"
sevenate = { path = "../sevenate-rs" }
clap = { version = "4.5.27", features = ["derive"] }
xml-builder = "0.5.4"
dbg_hex = "0.2.0"
