[package]
name = "sevenator"
version = "0.16.2"
authors = ["Jere Käpyaho <2261936+jerekapyaho@users.noreply.github.com>"]
repository = "https://github.com/coniferprod/sevenator"
edition = "2021"

[dependencies]
env_logger = "0.11.8" # https://crates.io/crates/env_logger
log = "0.4.29" # https://crates.io/crates/log
num = "0.4.3" # https://crates.io/crates/num
rand = "0.9.2" # https://crates.io/crates/rand
bit = "0.1.1" # https://crates.io/crates/bit
syxpack = "0.17.0"
sevenate = "0.6.2"
#sevenate = { git = "https://github.com/coniferprod/sevenate-rs.git" }
#sevenate = { path = "../sevenate-rs" }
clap = { version = "4.5.53", features = ["derive"] } # https://crates.io/crates/clap
xml-builder = "0.5.4" # https://crates.io/crates/xml-builder
dbg_hex = "0.2.0" # https://crates.io/crates/dbg_hex
xml-rs = "1.0" # https://crates.io/crates/xml-rs
